--- a/exercise03/customerFrontend.html
+++ b/exercise03/customerFrontend.html
@@ -31,10 +31,10 @@
       </div>
   </div>
   </div>
-  <form action="customerBackend.php" method="post" onsubmit="return checkForm()">
+  <form name="order"action="customerBackend.php" method="post" onsubmit="return checkForm()">
     <h1 class="more">Order Form! </h1>
-      <div id="form"> 
-      Name: <input type="text" name="name"><br>
+      <div id="formPt1"> 
+      Name: <input type="text" id="name" name="name"><br>
       Username (in the form name@domain.com): <input type="email" name="email"><br>
       Password: <input type="password" name="password"><br>
       <h1 class="more">Shopping Cart:<br></h1>
@@ -44,13 +44,15 @@
       <input type="number" id="cyclamen" name="cyclamen" min="0"> <br>
       <label for="fittonia">Fittonia Quantity:</label>
       <input type="number" id="fittonia" name="fittonia" min="0"> <br>
+    </div> 
+    <div id="shipping">
       <h1 class="more">Shipping Choices: <br></h1>
       <input type="radio" name="ship" value="free">Free 7-day shipping <br>
       <input type="radio" name="ship" value="threeDay">$5.00 3-day shipping <br>
       <input type="radio" name="ship" value="overNight">$50.00 overnight shipping <br>
       <input type="reset">
       <input type="submit" value="Submit Order">
-      </div> 
+    </div>
     </h2>
   </form>
 
